--- a/components/homepage/homePage.css
+++ b/components/homepage/homePage.css
@@ -174,12 +174,12 @@ body {
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 636.188px;
+    height: auto;
     margin-top: 40px;
     padding-top: 8px;
     padding-left: 16px;
     padding-right: 16px;
-    padding-bottom: 40px;
+    padding-bottom: 80px;
 }
 
 .contFootCardSocial {
@@ -187,14 +187,15 @@ body {
     flex-wrap: wrap;
     justify-content: space-between;
     width: 100%;
-    height: 531.125px;
+    height: auto;
+    padding-bottom: 36px;
 }
 
 .flexCardLink {
     display: flex;
     flex-wrap: wrap;
     width: 600px;
-    height: 451.125px;
+    height: auto;
 }
 
 .footCard ul {
@@ -244,6 +245,7 @@ body {
     width: 40px;
     height: 40px;
     border-radius: 100%;
+    padding-bottom: 10px;
     background-color: rgb(40, 40, 40);
 }
 
@@ -252,10 +254,8 @@ body {
 }
 
 .footIcon svg {
-    padding-bottom: 4.75px;
     width: 16px;
     height: 16px;
-
     background-color: transparent
 }
 
