--- a/components/homepage/index.html
+++ b/components/homepage/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="../homepage-card/homepageCard.css">
     <link rel="stylesheet" href="../cookie-message/index.css">
    <link rel="stylesheet" href="../side-navbar/index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body class="homePage">
