--- a/components/search/style-search.css
+++ b/components/search/style-search.css
@@ -162,3 +162,124 @@ body {
   height: 53px;
   font-size: 16px;
 }
+
+.containerFooter {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: auto;
+  margin-top: 40px;
+  padding-top: 8px;
+  padding-left: 16px;
+  padding-right: 16px;
+  padding-bottom: 80px;
+}
+
+.contFootCardSocial {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 100%;
+  height: auto;
+  padding-bottom: 36px;
+}
+
+.flexCardLink {
+  display: flex;
+  flex-wrap: wrap;
+  width: 600px;
+  height: auto;
+}
+
+.footCard ul {
+  width: 156px;
+  height: 201.562px;
+  margin-right: 18px;
+  margin-bottom: 32px;
+  list-style: none;
+  text-decoration: none;
+  text-align: left;
+  font-size: 16px;
+  font-weight: 600;
+}
+
+.footCard ul {
+  padding: 0;
+}
+
+.footCard ul li {
+  padding-bottom: 16px;
+}
+
+.footCard ul li p {
+  margin: 0;
+}
+
+.footCard ul li a {
+  text-decoration: none;
+  letter-spacing: -1px;
+  color: rgba(156, 156, 156, 255);
+}
+
+.footCard ul li a:hover {
+  color: white;
+  text-decoration: underline;
+}
+
+.footSocial {
+  display: flex;
+}
+
+.backIcon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 15px;
+  width: 40px;
+  height: 40px;
+  border-radius: 100%;
+  padding-top: 4px;
+  background-color: rgb(40, 40, 40);
+}
+
+.backIcon:hover {
+  background-color: rgb(105, 105, 105);
+}
+
+.footIcon svg {
+  width: 16px;
+  height: 16px;
+  background-color: transparent;
+}
+
+.footIcon svg .fillIcon {
+  fill: white;
+}
+
+.footIcon svg .borderIcon {
+  fill: white;
+}
+
+hr {
+  width: 100%;
+  border: 0.667px;
+  margin-bottom: 24px;
+  margin-top: 0;
+  box-sizing: border-box;
+  -webkit-tap-highlight-color: transparent;
+  border: 0px;
+  border-block-start: 0.5px solid #292929;
+}
+
+.finalFooter {
+  display: flex;
+  width: 100%;
+  height: 22.396px;
+  padding-top: 16px;
+}
+
+.finalFooter p {
+  font-size: 14px;
+  font-weight: 500;
+  color: rgba(156, 156, 156, 255);
+}
